# segments-intersection-task

./: CMakeLists.txt  Doxyfile  README.md
src/: CMakeLists.txt  Segment3D.cpp  Segment3D.hpp  Vector3D.cpp  Vector3D.hpp
tests/: CMakeLists.txt  test.cpp
